README.md 파일 내용 보강 및 라이선스 수정